# nps-vis

./: .gitignore  Dockerfile  README.md
src/: README.md  app.py  pyproject.toml  requirements.txt
src/data/: compare_country.py  population.csv  preprocessing.py
