[tool.poetry]
name = "visualization"
version = "0.1.0"
description = ""
authors = ["tingjung <jnes0824@gmail..com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"
pandas = "^2.2.0"
plotly = "^5.18.0"
mypy = "^1.8.0"
pycountry = "^23.12.11"
pycountry-convert = "^0.7.2"
dash-bootstrap-templates = "^1.1.2"
dash-ag-grid = "^31.0.1"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
